--- a/branches/dev-issue-14/MyNightOut/src/mynightout/ui/CancelBookForm.form
+++ b/branches/dev-issue-14/MyNightOut/src/mynightout/ui/CancelBookForm.form
@@ -95,8 +95,14 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="userNameTextField">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="userNameTextFieldActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="reservationIdTextField">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="reservationIdTextFieldActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="okButton">
       <Properties>
